# bazzino

./: .gitattributes  .gitignore  README.md  pixi.toml  setup.cfg
data/: 10NaCl_FileKey.csv  10NaCl_SubjectKey.csv  45NaCl_FileKey.csv  45NaCl_SubjectKey.csv  _cache_behav.pickle  _cache_clustering.pickle  _cache_photo.pickle  _cache_transitions.pickle  angvel_data.pickle  angvel_data_z.pickle  movement_data.pickle  movement_data_z.pickle  pcaresults.pickle  sigmoidal_fits.pickle  snips_angvel.pickle  snips_angvel_selected_conditions.pickle  snips_data_selected_conditions.pickle  snips_data_selected_conditions_reduced.pickle  snips_photo_forDLC.pickle  test_data.pickle  ttls.csv  x_angvel.pickle  x_array.pickle  x_array_2clusters_alltrials.pickle  x_array_forDLC.pickle  x_array_with_2clusters.pickle  x_array_with_7clusters.pickle  x_array_with_clusters.pickle
notebooks/: add_sex_to_xarrays.ipynb  assemble_data.ipynb  assemble_dlc_data.ipynb  behav_indvidual_rats.ipynb  classifying_behav_trials.ipynb  cluster_analysis.ipynb  cluster_analysis_all_trials.ipynb  cluster_analysis_averaged_trials.ipynb  cluster_analysis_more_clusters.ipynb  clusters_diff_from_zero.ipynb  compare_angvel_movement.ipynb  crosscorrelation.ipynb  equalize_photometry_and_dlc_arrays.py  equalize_photometry_and_dlc_data.ipynb  fig1_and_2.ipynb  figs_for_ang_vel.ipynb  figs_for_behav_dopamine.ipynb  figs_for_cluster_analysis.ipynb  figs_for_frejus.ipynb  figs_for_paper.ipynb  figs_for_photometry.ipynb  figs_for_transitions.ipynb  figure_1_behaviour.ipynb  figure_1_paper.ipynb  figure_2_paper.ipynb  (+24 more)
(+34 files in other folders)
