[metadata]
name = bazzino
version = 0.0.0
description = Bazzino analysis utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules =
    extract_behav_parameters
    find_folders_without_avis
    plots_for_spectral
python_requires = >=3.8
package_dir =
    = src
